fixed some auth issues